[package]
name = "hlua"
version = "0.4.1"
authors = [ "pierre.krieger1708@gmail.com" ]
description = "Zero-cost high-level wrapper for Lua"
keywords = ["lua"]
repository = "https://github.com/tomaka/hlua"
documentation = "http://docs.rs/hlua"
license = "MIT"
edition = "2018"

[features]
lua52 = ["lua52-sys"]
lua54 = ["lua54-sys"]
no-sparse-arrays = []

[dependencies]
libc = "0.2"
lua52-sys = { path = "../lua52-sys", optional = true }
lua54-sys = { path = "../lua54-sys", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
