[package]
name = "hlua"
version = "0.4.1"
authors = ["pierre.krieger1708@gmail.com", "wildbook <book.wille@gmail.com>"]
description = "Zero-cost high-level wrapper for Lua"
keywords = ["lua"]
repository = "https://github.com/tomaka/hlua"
documentation = "http://docs.rs/hlua"
license = "MIT"
edition = "2021"

[features]
nightly = []

# lua version selection, pick one
luajit2 = ["luajit2-sys", "_luaapi_51", "_luaapi_lj2"]
lua52   = ["lua52-sys",   "_luaapi_52"]
lua54   = ["lua54-sys",   "_luaapi_54"]

# internal flags, avoid setting these manually
_luaapi_51  = []
_luaapi_52  = []
_luaapi_54  = []
_luaapi_lj2 = []

[dependencies]
libc = "0.2"
lua52-sys   = { path = "../lua52-sys",   optional = true }
lua54-sys   = { path = "../lua54-sys",   optional = true }
luajit2-sys = { path = "../luajit2-sys", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
